added on mouse down event

--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -62,6 +62,11 @@
     {
     }
 
+    [JSInvokable]
+    public async ValueTask OnMouseDown()
+    {
+    }
+
     public class CanvasMeta
     {
         public int Width { get; set; }
