added events and game time

--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -1,20 +1,23 @@
 ﻿@page "/"
 
 @using System.Drawing
+@using Audacia.Quest.Core
+@using Audacia.Quest.Core.Events
+@using Audacia.Quest.Core.Params
 @using Blazor.Extensions
 @using Blazor.Extensions.Canvas.Canvas2D
-@using Blazor.Extensions.Canvas.WebGL
 
 @inject IJSRuntime JsRuntime
 
-<div id="canvasContainer" style="position: fixed; opacity: 1; width: 100%; height: 100%">
+<div id="canvasContainer" style="background-color: #6495ED; position: fixed; opacity: 1; width: 100%; height: 100%">
     <BECanvas @ref="_canvas"></BECanvas>
 </div>
 
 @code
 {
-    private WebGLContext _context;
+    private Canvas2DContext _context;
     protected BECanvasComponent _canvas;
+    private Game _game;
 
     bool _initialized = false;
 
@@ -26,30 +29,40 @@
             _initialized = true;
         }
 
-        this._context = await this._canvas.CreateWebGLAsync();
-
-        await this._context.ClearColorAsync(0.39f, 0.58f, 0.92f, 1);
-        await this._context.ClearAsync(BufferBits.COLOR_BUFFER_BIT);
+        _context = await this._canvas.CreateCanvas2DAsync();
     }
 
     private async ValueTask InitGame()
     {
         var canvasMeta = await JsRuntime.InvokeAsync<CanvasMeta>("initCanvas", DotNetObjectReference.Create(this));
-
         _canvas.Height = canvasMeta.Height;
         _canvas.Width = canvasMeta.Width;
 
         await JsRuntime.InvokeAsync<object>("gameWindowResize", DotNetObjectReference.Create(this));
+
+        EventsCollection.Add("Resize", new ResizeEvent());
+
+        _game = new Game();
+
+        _game.Init();
+        _game.LoadContent();
     }
 
     [JSInvokable]
     public async ValueTask GameLoop()
     {
+        _game.Update();
+        _game.Draw();
     }
 
     [JSInvokable]
     public async ValueTask OnResize(int screenWidth, int screenHeight)
     {
+        EventsCollection.PerformEvent("Resize", new ScreenDimensions
+            {
+                Width = screenWidth,
+                Height = screenHeight
+            });
     }
 
     [JSInvokable]
