--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -9,6 +9,8 @@
 
 @inject IJSRuntime JsRuntime
 
+<img @ref="_fox" hidden src="assets/fox.png" />
+
 <div id="canvasContainer" style="background-color: #6495ED; position: fixed; opacity: 1; width: 100%; height: 100%">
     <BECanvas @ref="_canvas"></BECanvas>
 </div>
@@ -18,6 +20,11 @@
     private Canvas2DContext _context;
     protected BECanvasComponent _canvas;
     private Game _game;
+
+    ElementReference _fox;
+
+    private float x = 0;
+    private float y = 0;
 
     bool _initialized = false;
 
@@ -57,6 +64,10 @@
     {
         _game.Update();
         _game.Draw();
+
+        await _context.ClearRectAsync(0, 0, _canvas.Width, _canvas.Height);
+
+        await _context.DrawImageAsync(_fox, x, y, _canvas.Width / 3, _canvas.Height / 2);
     }
 
     [JSInvokable]
@@ -76,6 +87,23 @@
             {
                 KeyCode = keyCode
             });
+
+        if(keyCode == 39)
+        {
+            x += 20f;
+        }
+        if (keyCode == 37)
+        {
+            x -= 20f;
+        }
+        if (keyCode == 38)
+        {
+            y -= 20f;
+        }
+        if (keyCode == 40)
+        {
+            y += 20f;
+        }
     }
 
     [JSInvokable]
