--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -12,7 +12,7 @@
 @*<img @ref="_fox" hidden src="assets/fox.png" />*@
 @if (Initialized)
 {
-    <Assets Context="_gameContext" OnLoaded="@OnAssetsLoaded" />
+    <Assets Context="_gameContext" />
 }
 
 <div id="canvasContainer" style="background-color: #6495ED; position: fixed; opacity: 1; width: 100%; height: 100%">
@@ -52,18 +52,13 @@
         EventsCollection.Add(EventConstants.RESIZE, new ResizeEvent());
         EventsCollection.Add(EventConstants.KEY_DOWN, new KeyboardEvent());
         EventsCollection.Add(EventConstants.KEY_UP, new KeyboardEvent());
-        EventsCollection.Add(EventConstants.MOUSE_DOWN, new MouseEvent());
-        EventsCollection.Add(EventConstants.MOUSE_UP, new MouseEvent());
+        EventsCollection.Add(EventConstants.MOUSE_DOWN, new Audacia.Quest.Core.Events.MouseEvent());
+        EventsCollection.Add(EventConstants.MOUSE_UP, new Audacia.Quest.Core.Events.MouseEvent());
 
         _gameContext = new BlazorGameContext(_context);
         _game = new Game(_gameContext);
 
         _game.Init();
-    }
-
-    protected void OnAssetsLoaded()
-    {
-        _game.ContentLoaded();
     }
 
     [JSInvokable]
