--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -9,13 +9,12 @@
 
 @inject IJSRuntime JsRuntime
 
-@*<img @ref="_fox" hidden src="assets/fox.png" />*@
 @if (Initialized)
 {
     <Assets Context="_gameContext" />
 }
 
-<div id="canvasContainer" style="background-color: #6495ED; position: fixed; opacity: 1; width: 100%; height: 100%">
+<div id="canvasContainer">
     <BECanvas @ref="_canvas"></BECanvas>
 </div>
 
@@ -49,16 +48,21 @@
 
         await JsRuntime.InvokeAsync<object>("gameWindowResize", DotNetObjectReference.Create(this));
 
-        EventsCollection.Add(EventConstants.RESIZE, new ResizeEvent());
-        EventsCollection.Add(EventConstants.KEY_DOWN, new KeyboardEvent());
-        EventsCollection.Add(EventConstants.KEY_UP, new KeyboardEvent());
-        EventsCollection.Add(EventConstants.MOUSE_DOWN, new Audacia.Quest.Core.Events.MouseEvent());
-        EventsCollection.Add(EventConstants.MOUSE_UP, new Audacia.Quest.Core.Events.MouseEvent());
+        InitializeEvents();
 
         _gameContext = new BlazorGameContext(_context);
         _game = new Game(_gameContext);
 
         _game.Init();
+    }
+
+    private void InitializeEvents()
+    {
+        EventsCollection.Add(EventConstants.RESIZE, new ResizeEvent());
+        EventsCollection.Add(EventConstants.KEY_DOWN, new KeyboardEvent());
+        EventsCollection.Add(EventConstants.KEY_UP, new KeyboardEvent());
+        EventsCollection.Add(EventConstants.MOUSE_DOWN, new Audacia.Quest.Core.Events.MouseEvent());
+        EventsCollection.Add(EventConstants.MOUSE_UP, new Audacia.Quest.Core.Events.MouseEvent());
     }
 
     [JSInvokable]
@@ -77,51 +81,31 @@
     [JSInvokable]
     public async ValueTask OnResize(int screenWidth, int screenHeight)
     {
-        EventsCollection.PerformEvent(EventConstants.RESIZE, new ScreenDimensions
-            {
-                Width = screenWidth,
-                Height = screenHeight
-            });
+        EventsCollection.PerformEvent(EventConstants.RESIZE, new ScreenDimensions(screenWidth, screenHeight));
     }
 
     [JSInvokable]
     public async ValueTask OnKeyDown(int keyCode)
     {
-        EventsCollection.PerformEvent(EventConstants.KEY_DOWN, new Keyboard
-            {
-                KeyCode = keyCode
-            });
+        EventsCollection.PerformEvent(EventConstants.KEY_DOWN, new Keyboard(keyCode));
     }
 
     [JSInvokable]
     public async ValueTask OnKeyUp(int keyCode)
     {
-        EventsCollection.PerformEvent(EventConstants.KEY_UP, new Keyboard
-            {
-                KeyCode = keyCode
-            });
+        EventsCollection.PerformEvent(EventConstants.KEY_UP, new Keyboard(keyCode));
     }
 
     [JSInvokable]
     public async ValueTask OnMouseDown(int mouseButtonCode, int x, int y)
     {
-        EventsCollection.PerformEvent(EventConstants.MOUSE_DOWN, new Mouse
-            {
-                ButtonCode = mouseButtonCode,
-                X = x,
-                Y = y
-            });
+        EventsCollection.PerformEvent(EventConstants.MOUSE_DOWN, new Mouse(mouseButtonCode, x, y));
     }
 
     [JSInvokable]
     public async ValueTask OnMouseUp(int mouseButtonCode, int x, int y)
     {
-        EventsCollection.PerformEvent(EventConstants.MOUSE_UP, new Mouse
-            {
-                ButtonCode = mouseButtonCode,
-                X = x,
-                Y = y
-            });
+        EventsCollection.PerformEvent(EventConstants.MOUSE_UP, new Mouse(mouseButtonCode, x, y));
     }
 
     public class CanvasMeta
