updated how we set the sprite for a component

--- a/Audacia.Quest/Audacia.Quest/Shared/Assets.razor
+++ b/Audacia.Quest/Audacia.Quest/Shared/Assets.razor
@@ -1,6 +1,6 @@
 ﻿@foreach (var asset in Context.Assets)
 {
-    <img @ref="asset.Ref" src="@asset.Renderer.ImageSource" @onload="asset.ContentLoaded" />
+    <img @ref="asset.Ref" src="@asset.Sprite.ImageSource" @onload="asset.ContentLoaded" />
 }
 
 @code {
