--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor.css
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor.css
@@ -1,6 +1,7 @@
 ﻿#canvasContainer {
     background-color: #6495ED;
     position: fixed;
+    top: 0;
     opacity: 1;
     width: 100%;
     height: 100%;
