--- a/Audacia.Quest/Audacia.Quest/Pages/Index.razor
+++ b/Audacia.Quest/Audacia.Quest/Pages/Index.razor
@@ -22,7 +22,7 @@
 {
     private Canvas2DContext _context;
     private BECanvasComponent _canvas;
-    private Game _game;
+    private IGame _game;
     private BlazorGameContext _gameContext;
 
     private bool _loadContent = true;
